# x

./: .gitignore  .gitpod.yml  README.md
golink/: Cargo.toml  Dockerfile  NOTES  README.md  Rocket.toml
golink-axum/: Cargo.toml  shell.nix
golink-axum/scripts/: migrate.sh
golink-axum/src/: main.rs
golink-go/: go.mod  go.sum  link.go  store.go
golink-go/cmd/: main.go
golink-go/inmemory/: inmemory.go
golink/scripts/: build.sh  deploy.sh  serve.sh
golink/src/: config.rs  lib.rs  routes.rs  schema.rs
langchain-exp/: .gitignore  README.md  quickstart.ipynb
laundry-folding-sim/: README.md  go.mod  main.go
mastodon-client/: .gitignore  app.py  curated.py  experiments.ipynb  main.py  mypy.ini  requirements.txt
mastodon-client-tauri/: .gitignore  flake.nix
mastodon-client-tauri/src-tauri/: Cargo.toml
mastodon-client-tauri/src-tauri/src/: main.rs
mastodon-client-tauri/www/: App.tsx  index.html
mastodon-client-wails/: app.go  go.mod  go.sum  main.go  wails.json
mastodon-client-wails/frontend/: index.html  package-lock.json
mastodon-client/app/: __init__.py  routes.py  template_globals.py
mastodon-client/curated/: __init__.py  models.py  routes.py
mastodon-client/plugins/: __init__.py  noop.py
mastodon-client/templates/: _basepost.html  _post.html  _postbuttons.html  _postcontent.html  _reblogpost.html  _reply.html  _replypost.html  settings.html  timeline.html
obsidian-self-destruct/: .gitignore  README.md  devenv.nix  main.ts  manifest.json  package-lock.json  package.json  tsconfig.json
scraper/: README.md  requirements.txt  scraper.py
(+27 files in other folders)
