[package]
name = "golink-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "0.9.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }