[package]
name = "tauri-deno-starter"
version = "0.1.0"
description = "Deno + Tauri app"
authors = ["Denosaur"]
license = ""
repository = "https://github.com/marc2332/tauri-deno-starter"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
megalodon = "0.11.8"
tauri = { version = "1.1.1", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
